# llm-tabular-data-injection

./: .gitignore  LICENSE  README.md  pyproject.toml
bot/: openai_bot.py  pandasai_bot.py
